add swagger focumentation
