# routes/taskRoutes.js
@@ -1,6 +1,6 @@
 const express = require("express");
 const {
-  getTasks,
+  getTask,
   getTasksCreatedByAdmin,
   createTask,
   updateTask,
@@ -11,9 +11,9 @@ const validateToken = require("../middlewares/validateToken");
 const router = express.Router();
 
 router.post("/tasks", validateToken, validateRole, createTask);
-router.get("/tasks/:id", validateToken, validateRole, getTasks);
-router.put("/tasks/:id", validateToken, validateRole, updateTask);
 router.get("/tasks", validateToken, validateRole, getTasksCreatedByAdmin);
+router.get("/tasks/:id", validateToken, validateRole, getTask);
+router.put("/tasks/:id", validateToken, validateRole, updateTask);
 router.delete("/tasks/:id", validateToken, validateRole, deleteTask);
 
 module.exports = router;
